Closed
Bug 252143
Opened 21 years ago
Closed 21 years ago
Leak in nsScreenGtk::Init of gdk_property_get() result
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: crispin, Assigned: blizzard)
References
Details
Attachments
(1 file)
773 bytes,
patch
|
caillon
:
review+
blizzard
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a3) Gecko/20040716 Galeon/1.3.16.99
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a3) Gecko/20040716 Galeon/1.3.16.99
Valgrind picked up a tiny leak in nsScreenGtk::Init():
==17899== 96 bytes in 1 blocks are definitely lost in loss record 10531 of 11630
==17899== at 0x3414A101: malloc (vg_replace_malloc.c:109)
==17899== by 0x34BAC0B6: g_malloc (in /usr/lib/libglib-2.0.so.0.400.4)
==17899== by 0x349472DE: gdk_property_get (in /usr/lib/libgdk-x11-2.0.so.0.400.3)
==17899== by 0x35BC5D7F: nsScreenGtk::Init() (in
/space/opt/mozilla/lib/mozilla-1.8a3/components/libgfx_gtk.so)
==17899== by 0x35BC60FE: nsScreenManagerGtk::EnsureInit() (in
/space/opt/mozilla/lib/mozilla-1.8a3/components/libgfx_gtk.so)
==17899== by 0x35BC62DF: nsScreenManagerGtk::GetPrimaryScreen(nsIScreen**)
(in /space/opt/mozilla/lib/mozilla-1.8a3/components/libgfx_gtk.so)
==17899== by 0x35BB7D60: nsDeviceContextGTK::Init(void*) (in
/space/opt/mozilla/lib/mozilla-1.8a3/components/libgfx_gtk.so)
==17899== by 0x35CC5888: nsBaseWidget::BaseCreate(nsIWidget*, nsRect const&,
nsEventStatus (*)(nsGUIEvent*), nsIDeviceContext*, nsIAppShell*, nsIToolkit*,
nsWidgetInitData*) (in
/space/opt/mozilla/lib/mozilla-1.8a3/components/libwidget_gtk2.so)
==17899== by 0x35CB7FEA: nsWindow::NativeCreate(nsIWidget*, void*, nsRect
const&, nsEventStatus (*)(nsGUIEvent*), nsIDeviceContext*, nsIAppShell*,
nsIToolkit*, nsWidgetInitData*) (in
/space/opt/mozilla/lib/mozilla-1.8a3/components/libwidget_gtk2.so)
==17899== by 0x35CB4551: nsWindow::Create(void*, nsRect const&, nsEventStatus
(*)(nsGUIEvent*), nsIDeviceContext*, nsIAppShell*, nsIToolkit*,
nsWidgetInitData*) (in
/space/opt/mozilla/lib/mozilla-1.8a3/components/libwidget_gtk2.so)
==17899== by 0x363C193D: nsWebBrowser::Create() (in
/space/opt/mozilla/lib/mozilla-1.8a3/components/libwebbrwsr.so)
The gtk docs for gdk_property_get() say that you must g_free() the value filled
into the last argument (in this case the workareas)
Reproducible: Always
Steps to Reproduce:
![]() |
Reporter | |
Comment 1•21 years ago
|
||
![]() |
Reporter | |
Updated•21 years ago
|
Attachment #153683 -
Flags: superreview?(blizzard)
Attachment #153683 -
Flags: review?(caillon)
![]() |
Assignee | |
Updated•21 years ago
|
Attachment #153683 -
Flags: superreview?(blizzard) → superreview+
![]() |
||
Comment 3•21 years ago
|
||
Comment on attachment 153683 [details] [diff] [review]
Simple patch to fix the leak
r=caillon. Thanks for finding this.
Attachment #153683 -
Flags: review?(caillon) → review+
![]() |
Assignee | |
Comment 4•21 years ago
|
||
Checked in. Thanks!
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
![]() |
Reporter | |
Comment 5•21 years ago
|
||
*** Bug 250804 has been marked as a duplicate of this bug. ***
![]() |
||
Comment 6•21 years ago
|
||
*** Bug 268374 has been marked as a duplicate of this bug. ***
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•