Bug #252143.  Leak in nsScreenGtk::Init of gdk_property_get() result.  Patch from Crispin Flowerday <crispin@flowerday.cx>.  r=caillon, sr=blizzard